// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markdown rendering > renders a code block 1`] = `
"  const x = 1;

"
`;

exports[`markdown rendering > renders a flat list 1`] = `
"    • item 1
      • item 2
      • item 3

"
`;

exports[`markdown rendering > renders a mixed document 1`] = `
"[36m[1mSummary[22m[39m

    • First point
        • Sub-point A
          • Sub-point B
      • Second point

Run [90m\`npm test\`[39m to verify:

  expect(true).toBe(true);

[1mBold[22m and [3mitalic[23m text.

"
`;

exports[`markdown rendering > renders a nested list 1`] = `
"    • item 1
        • nested a
          • nested b
      • item 2

"
`;

exports[`markdown rendering > renders headings 1`] = `
"[36m[1m[4mHeading 1[24m[22m[39m

[36m[1mHeading 2[22m[39m

[36m[1mHeading 3[22m[39m

"
`;

exports[`markdown rendering > renders inline code 1`] = `
"Use the [90m\`renderMarkdown\`[39m helper.

"
`;
